--- a/app/views/achievements/_form.html.erb
+++ b/app/views/achievements/_form.html.erb
@@ -84,7 +84,7 @@
                 Get more than <input class="asm-min-grade-input form-temp" placeholder="min %" value="60" />
                 % in
                 <select class="form-temp">
-                  <% @all_asm.each do |asm| %>
+                  <% @course.assessments.each do |asm| %>
                       <option value="<%= asm.id %>" data-type="<%= asm.class.name %>">
                         <%= asm.get_title %>
                       </option>
@@ -112,7 +112,7 @@
               <td>
                 Earned
                 <select name="achievement" class="form-temp">
-                  <% @all_ach.each do |ach| %>
+                  <% @course.achievements.each do |ach| %>
                       <option value="<%= ach.id %>"><%= ach.title %></option>
                   <% end %>
                 </select>
@@ -138,7 +138,7 @@
               <td>
                 Reached
                 <select name="achievement" class="form-temp">
-                  <% @all_level.each do |lvl| %>
+                  <% @course.levels.each do |lvl| %>
                       <option value="<%= lvl.id %>"><%= lvl.get_title %></option>
                   <% end %>
                 </select>
