--- a/app/views/achievements/_form.html.erb
+++ b/app/views/achievements/_form.html.erb
@@ -1,5 +1,7 @@
 <%- display_name = @course.customized_title_by_model(Achievement).singularize -%>
-<%= form_for [@course, @achievement], html: { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for [@course, @achievement], 
+                     :html=> { :class=> 'form-horizontal' },
+                     defaults: { input_html: { class: 'span7' } } do |f| %>
     
     <% if @achievement.errors.any? %>
       <div id="error_explanation">
@@ -13,28 +15,10 @@
         </ul>
       </div>
     <% end %>
-    <div class="control-group">
-      <%= f.label :title, class: 'control-label' %>
-      <div class="controls">
-        <%= f.text_field :title, class: 'text_field span7',
-                         placeholder: "Give it a cool name!" %>
-      </div>
-    </div>
+    <%= f.input :title, placeholder: 'Give it a cool name!' %>
+    <%= f.input :description, placeholder: 'Give it an awesome back story', :input_html => { :rows => 10 } %>
 
-    <div class="control-group">
-      <%= f.label :description, class: 'control-label' %>
-      <div class="controls">
-        <%= f.text_area :description, class: 'text_area span7', rows: '10',
-                        placeholder: "Give it a awesome back story."%>
-      </div>
-    </div>
-    <div class="control-group">
-      <%= f.label "Assign Mode", class: 'control-label' %>
-      <div class="controls checkbox-text">
-        <%= f.check_box :auto_assign, id: "ach-auto-assign" %> Auto Assign
-      </div>
-    </div>
-
+    <%= f.input :auto_assign, :label => 'Assign mode', :inline_label => 'Auto Assign', :input_html => { class: '' } %>
 
     <div class="control-group">
       <%= f.label :icon_url, class: 'control-label' %>
@@ -50,13 +34,7 @@
         <a href="#image-uploader-modal" data-toggle="modal">Upload new icon</a>
       </div>
     </div>
-
-	<div class="control-group">
-      <%= f.label "Published", class: 'control-label' %>
-      <div class="controls checkbox-text">
-        <%= f.check_box :published %>
-      </div>
-    </div>
+  <%= f.input :published, :input_html => { class: '' } %>
     
     <hr/>
     <h2>Requirements</h2><p>The requirements are optional, and you can have as
@@ -162,11 +140,7 @@
       </div>
     </div>
 
-    <div class="form-actions">
-      <%= f.submit "#{@achievement.new_record? ? 'Create' : 'Update'} #{display_name}", :class => 'btn btn-primary form-submit' %>
-      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                  :back, :class => 'btn' %>
-    </div>
+    <%= f.button :form_submit, cancel: course_achievements_path %>
 <% end %>
 <%= render :partial => "layouts/html_editor" %>
 
